# logos-zone-sequencer-module

./: CMakeLists.txt  README.md  flake.nix  manifest.json  metadata.json
src/: i_logos_zone_sequencer_module.h  logos_zone_sequencer_module.cpp  logos_zone_sequencer_module.h
